stopped cell content from wrapping and added ellipsis to long strings #585

--- a/src/static/src/scss/components/_table.scss
+++ b/src/static/src/scss/components/_table.scss
@@ -53,6 +53,10 @@
     a {
       color: inherit;
       display: block;
+      max-width: 35ch;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
 
       &:visited {
         color: inherit;
